# GNSS-Error_PS

./: .gitignore  API_README.md  NEXTJS_UI_SUMMARY.md  README.md  README_FULLSTACK.md  SETUP_GUIDE.md  Ui.html  api_server.py  app.py  app_withn-beats.py  gnss_pipeline.py  main.py  original_uploaded_file.csv.csv  pyproject.toml  requirements-api.txt  requirements.txt  run.py  start.bat  start.sh  test.py
backend/: app.py  gnss_predictor.py  requirements.txt  routes.py
backend/services/: models.py  prediction_service.py
frontend/: index.html  package-lock.json  package.json  script.js  style.css
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/Auth/: Login.js  Register.js
frontend/src/components/Dashboard/: Dashboard.js
frontend/src/contexts/: AuthContext.js  ThemeContext.js
frontend/src/services/: api.js
frontend/src/themes/: theme.js
model/: 15min-best_NBEATS_model.pth  15min-best_bigru_model_with_timesereas split.pth  15min-best_bilstm_model_with_timesereas split.pth  15min-best_gru_model_with_timesereas split.pth  15min-best_lstm_model.pth  15min-best_transformars_model_with_timesereas split.pth
nextjs-ui/: .env.example  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
nextjs-ui/src/app/: globals.css  layout.tsx  page.tsx
nextjs-ui/src/components/: ErrorChart.tsx  FileUpload.tsx  MetricsCard.tsx  Navigation.tsx
nextjs-ui/src/lib/: api.ts
nextjs-ui/src/types/: index.ts
project/: GBM0MGXRAP_20260600000_01D_05M_ORB.SP3  brdc0660.26n  gnss_error_dataset.csv
scaler/: scaler.pkl
(+6 files in other folders)
