[project]
name = "isro-gnss"
version = "0.1.0"
description = "GNSS error forecasting app with deep-learning ensemble models and Streamlit UI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.3.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "streamlit>=1.35.0",
    "torch>=2.9.1",
]

[project.scripts]
isro-gnss = "main:main"
